--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed&display=swap');
+
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  font-size: 20px;
+}
+
+::selection {
+  background: #2ddab8;
+  color: white;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: #0c0f13;
+  overflow: hidden;
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  color: #8b8b8b;
+  font-size: 0.9rem;
+}
+
+a {
+  color: #545454;
+  text-decoration: none;
+}
+
+a:focus,
+a:hover {
+  color: #8b8b8b;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.loading {
+  padding: 10px;
+  transform: translate3d(-50%, -50%, 0);
+  color: #8b8b8b;
+}
+
+.scrollArea {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+}
+
+
+.bottom-left {
+  padding: 1.5rem;
+}
+
+
+.nav {
+  display: block;
+  height: 39px;
+  border-bottom: 1px solid #2ddab8;
+}
+
+.nav__lang {
+  padding: 10px;
+  float: right;
+}
+
+/* .paragraph {} */
+
+.paragraph img {
+  height: 100px;
+}
+
+select {
+  background-color: #000;
+  color:#fff;
+  border:none;
+  padding:none;
+}
+
+@media screen and (min-width: 53em) {
+
 }
