--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,12 @@ select {
   background-color:white;
 }
 
+img.home {
+  max-height: 40%;
+  max-width: 40%;
+
+}
+
 @media screen and (min-width: 53em) {
 
 }
