--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,7 @@ select {
   background-color:none;
 }
 .row:hover {   background-color:#fff; }
+
 .cell {display:inline-block;}
 
 .label { width: 240px; }
@@ -175,6 +176,15 @@ img.home {
 
 }
 
-@media screen and (min-width: 53em) {
-
+@media only screen and (max-width: 767px) {
+  /* phones */
+	.label {
+	  display: block;
+	}
+	/* todo "generic" .monthcell or .datacell 
+  .month, .inmonth , .outmonth  {
+		  width: 12px;
+		  font-size: 7px;
+  }
+	*/
 }
