--- a/src/index.css
+++ b/src/index.css
@@ -200,11 +200,12 @@ button.btn__float {
   float: right;
   right: 12%;
   left: 80%;
-  max-width: 30px;
+  max-width: 42px;
   width: 100%;
   font-size: 12px;
   padding: .5px;
-  border-radius: 50%;
+  border-radius: 100%;
+  height: 42px;
 }
 
 @media only screen and (max-width: 767px) {
