--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ body {
   color: #3C4C4F;
   /* overflow: hidden; */
   font-family: 'IBM Plex Sans Condensed', sans-serif;
+  /* letter-spacing: -.07em; */
   background-color: #F2F3ED;
   font-size: 0.9rem;
 }
@@ -61,6 +62,14 @@ a:hover {
   padding: 10px;
   /* transform: translate3d(-50%, -50%, 0); */
   color: #9c9c9c;
+}
+
+#burger-icon {
+  height:32px;
+  display: none;
+  float: right;
+  width: 42px;
+  fill: #3C4C4F;
 }
 
 /*
@@ -208,6 +217,7 @@ button.btn__float {
   height: 42px;
 }
 
+
 @media only screen and (max-width: 767px) {
   /* phones */
 	.label {
@@ -217,6 +227,40 @@ button.btn__float {
   div.subnav {
     display:none;
   }
+
+  #burger-icon {
+    transition-timing-function: ease;
+    transition: 0.2s;
+    display: block;
+  }
+
+  #burger-icon.open {
+    transform: rotate(90deg);
+  }
+
+  .nav nav ul li {
+
+    padding-right: 12px;
+    padding: 12px;
+    border: 1px solid #CA753D;
+}
+
+  nav#main {
+    display: none;
+    position: absolute;
+    width: 100%;
+  }
+
+  nav#main.visible {
+    display: block;
+  }
+
+  nav#main ul li {
+    display: block;
+    background-color: #fff;
+  }
+
+
 
 
 	/* todo "generic" .monthcell or .datacell
